<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <EditText
            android:id="@+id/chapterEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/enter_chapter_no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/enter_verse_no"
            android:layout_marginVertical="10dp"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textColor="@color/black"
            android:id="@+id/verseEditText"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_slok"
            android:background="@drawable/button"
            android:textColor="#5D4037" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gita_font"
            />

        <Button
            android:id="@+id/btnToChapActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/view_chapters"
            android:background="@drawable/button"
            android:textColor="#5D4037" />

    </LinearLayout>



</ScrollView>